# backtester-cpp

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  README.MD  README.md  main.py  pyproject.toml
data/: README.md
data/database/: StrategyDatabase.cpp  StrategyDatabase.h
include/: backtester.h  csv_reader.h  data.h  event.h  execution.h  perfomance.h  performance.h  portfolio.h  strategy.h
src/: BacktestWindow.cpp  BacktestWindow.h  ChartWidget.cpp  ChartWidget.h  StrategyManager.cpp  StrategyManager.h  main.cpp
src/core/: backtester.cpp  data.cpp  event.cpp  execution.cpp  performance.cpp  portfolio.cpp
src/gui/: MainWindow.cpp  MainWindow.h  backtest_screen.cpp  backtest_screen.h  create_strategy_screen.cpp  done_screen.h  manage_strategies_screen.cpp  manage_strategies_screen.h
src/gui/screens/: BacktestWindow.cpp  BacktestWindow.h  ChartWidget.cpp  ChartWidget.h  SimulationEngine.cpp  SimulationEngine.h  StrategyManager.cpp  StrategyManager.h  create_strategy_screen.cpp  create_strategy_screen.h  done_screen.cpp  done_screen.h  select_strategy_screen.cpp  select_strategy_screen.h  start_screen.cpp  start_screen.h  style.h
src/strategies/: README.md  macd.cpp  macd.h  stop_loss.cpp  stop_loss.h
strategies/: macd.h  stop_loss.h  strategy.h
tests/: CMakeLists.txt  backtest_window_tests.cpp  backtest_window_tests.h  backtester_tests.cpp  chart_widget_tests.cpp  chart_widget_tests.h  create_strategy_screen_tests.cpp  create_strategy_screen_tests.h  data_tests.cpp  data_tests.h  done_screen_tests.cpp  done_screen_tests.h  event_tests.cpp  event_tests.h  execution_tests.cpp  macd_tests.cpp  macd_tests.h  mainwindow_tests.cpp  mainwindow_tests.h  performance_tests.cpp  portfolio_test.cpp  run_tests.cpp  select_strategy_screen_tests.cpp  select_strategy_screen_tests.h  simulation_engine_tests.cpp  simulation_engine_tests.h  start_screen_tests.cpp  start_screen_tests.h  stop_loss_tests.cpp  stop_loss_tests.h  strategy_database_tests.cpp  strategy_database_tests.h  strategy_manager_tests.cpp  strategy_manager_tests.h
